--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,36 +6,30 @@ project(computer_graphic VERSION 1.0 DESCRIPTION "Computer Graphics Laboratory w
 
 find_package(directxtk CONFIG REQUIRED)
 
-add_executable(computer_graphic src/Main.cpp
-        src/Input/InputDevice.cpp
+add_executable(computer_graphic
+        src/Main.cpp
         src/Game/Game.cpp
-        src/Utils/Delegates.cpp
+        src/Input/InputDevice.cpp
         src/Window/Window.cpp
-        src/Window/Window.h
         src/Renderer/Renderer.cpp
-        src/Renderer/Renderer.h
-        src/Object/Components/Scene/Render/ShaderComponent.cpp
-        src/Object/Components/Scene/Render/ShaderComponent.h
-        src/Object/Primitives/Triangle.cpp
-        src/Object/Primitives/Triangle.h
-        src/Renderer/SceneManager.cpp
-        src/Renderer/SceneManager.h
-        src/Object/Components/Scene/Render/RenderComponent.cpp
-        src/Utils/SMath.h
-        src/Object/Components/Scene/Render/MeshComponent.cpp
+        src/Scene/SceneManager.cpp
+        src/Components/Component.cpp
+        src/Components/Script/ScriptComponent.cpp
+        src/Components/Scene/Transform.cpp
+        src/Components/Scene/SceneComponent.cpp
+        src/Components/Scene/Render/ShaderComponent.cpp
+        src/Components/Scene/Render/RenderComponent.cpp
+        src/Components/Scene/Render/MeshComponent.cpp
         src/Object/Object.cpp
-        src/Object/Object.h
-        src/Renderer/Vertex.cpp
-        src/Renderer/Vertex.h
-        src/Object/Primitives/Rectangle.cpp
-        src/Object/Primitives/Rectangle.h
-        src/Utils/Colors.h
-        src/Object/Components/Scene/Transform.cpp
-        src/Object/Components/Scene/Transform.h
-        src/Object/Components/Scene/SceneComponent.cpp
-        src/Object/Components/Scene/SceneComponent.h
-        src/Object/Components/Component.cpp
-        src/Object/Components/Component.h
+        src/Object/GameObject/GameObject.cpp
+        src/Object/GameObject/Primitives/Triangle.cpp
+        src/Object/GameObject/Primitives/Rectangle.cpp
+        src/Asset/Shader/ShaderAsset.cpp
+        src/Asset/Mesh/MeshAsset.cpp
+        src/Types/Vertex.cpp
+        src/Utils/Delegates.cpp
 )
+
+add_subdirectory(src)
 
 target_link_libraries(computer_graphic Microsoft::DirectXTK)
